Actualicé index.html

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <li>
                     <a href="./salarios.html">Taller 4</a>
                 </li>
+                <li>
+                    <a href="./capacidadfinanciera.html">Capacidad financiera</a>
+                </li>
             </ol>
         </nav>
     </section>
